# haxball-bots

./: .gitignore  README.md  bot.js  config.json  get_config.js  main.js  package-lock.json  package.json  sandbox.js  stadium.hbs
ai/: pyproject.toml
ai/src/: haxball_env.py  main.py
